fixed quote column white space problem.

--- a/src/components/Pages/NewAppointmentForm/NewAppointmentForm.scss
+++ b/src/components/Pages/NewAppointmentForm/NewAppointmentForm.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   background-image: url("../../../img/manicuredGrass.jpeg");
   background-size: cover;
